# kg-note

./: .firebaserc  .gitignore  .pdm-python  CLAUDE.md  FIRESTORE_UPLOAD_INSTRUCTIONS.md  README.md  background.js  content.js  edit.html  edit.js  firebase.json  firestore.indexes.json  knowledge-weaver-complete-2025-06-30.json  learning.md  manifest.json  notes.html  notes.js  package-lock.json  package.json  popup.html  popup.js  pyproject.toml  tailwind.config.js
.claude/: settings.local.json
api/: api.py
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/data/: categories.json
backend/src/api/: api.py
backend/src/services/: knowledge_graph.py
background/: background.js
categories/: categories.html  categories.js  categories.json
content/: content.js
dataconnect/: dataconnect.yaml
dataconnect/schema/: schema.gql
docs/: cloud-deployment-plan.md  deployment-guide.md  export-import-guide.md  firestore-setup-guide.md  knowledge-graph-schema.md  learning.md  tutorial.md  visualization-troubleshooting.md
edit/: edit.html  edit.js
frontend/: manifest.json  package-lock.json  package.json  tailwind.config.js
frontend/src/assets/icons/: README.md
frontend/src/background/: background.js
frontend/src/content/: content.js
frontend/src/pages/categories/: categories.html  categories.js
frontend/src/pages/edit/: edit.html  edit.js
frontend/src/popup/: popup.html  popup.js
notes/: notes.html  notes.js
popup/: popup.html  popup.js
scripts/: README.md  requirements.txt  upload-to-firestore.py
sidepanel/: sidepanel.html
(+19 files in other folders)
