[project]
name = "kg-note"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "lucasXiaofan", email = "grammarlyuse364@gmail.com"},
]
dependencies = ["fastapi>=0.115.14", "uvicorn>=0.34.3", "openai>=1.92.2", "python-dotenv>=1.1.1"]
requires-python = "==3.13.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
